SubBt/force-app/main/default/objects/AP_360__c/AP_360__c.object-meta.xml
<CustomObject>
    <label>AP 360</label>
    <nameField>
        <label>AP 360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP 360</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>