SubBt/force-app/main/default/objects/AP_360__c/fields/Invoices_Manually_Touched__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Manually_Touched__c</fullName>
    <label>Invoices Manually Touched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>