SubBt/force-app/main/default/objects/AP_360__c/fields/Invoices_Paid_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Paid_on_Time__c</fullName>
    <label>Invoices Paid on Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>