SubBt/force-app/main/default/objects/AP_360__c/fields/Invoices_Processed_Straight_Through__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Processed_Straight_Through__c</fullName>
    <label>Invoices Processed Straight Through</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>