SubBt/force-app/main/default/objects/AP_360__c/fields/Number_of_Invoices_Processed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices_Processed__c</fullName>
    <label>Number of Invoices Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>