SubBt/force-app/main/default/objects/AP_360__c/fields/Time_To_Process_an_Invoice_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Process_an_Invoice_Days__c</fullName>
    <formula>Number_of_Invoices_Processed__c /  Total_Processing_Time_for_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Process an Invoice (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>