SubBt/force-app/main/default/objects/AP_360__c/fields/Total_Processing_Time_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Processing_Time_for_Invoice__c</fullName>
    <label>Total Processing Time for Invoice (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>