SubBt/force-app/main/default/objects/AP_360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Time_To_Process_an_Invoice_Days__c</columns>
    <columns>Invoices_Paid_on_Time__c</columns>
    <columns>Invoices_Manually_Touched__c</columns>
    <columns>Invoices_Processed_Straight_Through__c</columns>
    <columns>Number_of_Invoices_Processed__c</columns>
    <columns>Total_Processing_Time_for_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>